# geoip-api-c

./: .gitignore  .travis.yml  ChangeLog  GeoIP.spec.in  GeoIPWinDLL.patch  INSTALL  LICENSE  Makefile.am  Makefile.netware  Makefile.vc  README  README.MinGW  README.OSX  README.dev.md  README.md  READMEwin32.txt  THANKS  TODO  appveyor.yml  bootstrap  configure.ac  configure.in  ltmain.sh
.github/workflows/: codeql-analysis.yml
apps/: Makefile.am  geoipexport.c  geoipexportlocations.c  geoiplookup.c  geoiplookup6.c  geoipupdate-pureperl.pl  geoipupdate.c
conf/: GeoIP.conf.default  Makefile.am
data/: Makefile.am
debian/: README.Debian  changelog  clean  control  copyright  geoip-bin.install  libgeoip-dev.examples  libgeoip-dev.install  libgeoip1.install  rules  source.lintian-overrides  watch
dev-bin/: clang-format-all.sh  ppa-release.sh  release.sh
libGeoIP/: GeoIP.c  GeoIP.h  GeoIPBitReader.c  GeoIPBitReader.h  GeoIPCity.c  GeoIPCity.h  GeoIPUpdate.c  GeoIPUpdate.h  GeoIP_depreciated.c  GeoIP_internal.h  Makefile.am  Makefile.vc  md5.c  pread.c  regionName.c  timeZone.c  types.h
man/: Makefile.am  geoiplookup.1  geoiplookup6.1  geoipupdate.1  geoipupdate.1.in
regioncode/: fips10_4.txt  generate_regionName.pl  iso3166_2.txt  update-region-codes.pl
test/: Makefile.am  benchmark.c  city_test.txt  country_test.txt  country_test2.txt  country_test_name.txt  region_test.txt  test-geoip-asnum.c  test-geoip-city.c  test-geoip-domain.c  test-geoip-invalid-file.c  test-geoip-isp.c  test-geoip-netspeed.c  test-geoip-org.c  test-geoip-proxy.c  test-geoip-region.c  test-geoip.c
timezone/: generate_timeZone.pl  timezone.txt
